# EE-559

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
EE-559/: customDataset.ipynb  data_analysis.ipynb  reformat_data.ipynb
EE-559/MMHS150K/: means_stds.csv
data/MMHS150K/: examples.json
data/config/: config_Flamingo0S.json  config_Lava0S.json  config_Lava0S_tweet.json  config_Lava0S_tweet_claude.json  config_Lava0S_tweet_informed.json  config_Lava0S_tweet_informed_2.json  config_Lava0S_tweet_only.json  config_debug.json
data/results/Bert/: predictions_bin_bert.json  predictions_prob_bert.json
data/results/FCM/: fcm_outputs.json  fcm_predictions.json
noteboks/: flammingo.ipynb
notebooks/: acc_test_fcm.ipynb  analysis_dataset_final.ipynb  bert_analysis.ipynb  bert_fine_tune.ipynb  bert_fine_tune_v2.ipynb  comparison_models.ipynb  customDataset.ipynb  data_analysis.ipynb  exemple.ipynb  flammingo.ipynb  lava.ipynb  llava_explained.ipynb  process_results_lava.ipynb  reformat_data.ipynb  test_fcm.ipynb  test_metrics_log.csv  train_metrics_log.csv
results/: random.csv
scripts/: bert_fine_tune.sh  bert_fine_tune_v2.sh  run_fcm.sh  run_lava.sh  run_lava_tweet.sh  test.sh  test_fcm.sh  test_lava.sh
src/: Lava.py  analysis_all.py  analysis_bert.py  analysis_fcm.py  analysis_llava.py  bert_fine_tune.py  bert_fine_tune_v2.py  dataset.py  eval.py  eval_1.py  eval_fcm.py  fcm.py  models.py  reformat_data.py  reformat_lava_results.py  run_fcm.py  run_lava.py  run_lava_tweet.py  test_fcm.py  test_lava.py  utils.py
(+11 files in other folders)
