[tool.poetry]
name = "src"#name of your module
version = "0.0.1"#version of your module
description = "EE-559 project"#description of your modeél
authors = ["Edouard Koehn"]
license = "MIT License"

# Main dependencies
[tool.poetry.dependencies]
python = ">=3.12,<3.13"
open-flamingo= "^0.0.2"

# Dev dependencies
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
vadersentiment = "^3.3.2"
textstats = "^0.1.2"
nltk = "^3.8.1"
scikit-learn = "^1.4.2"
transformers = "^4.40.1"
accelerate = "^0.29.3"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''
# Scripts of your module
[tool.poetry.scripts]
run_lava = "src:test_lava.evalutate_lava"
